--- a/Smooches/Storyboards/Base.lproj/Main.storyboard
+++ b/Smooches/Storyboards/Base.lproj/Main.storyboard
@@ -28,23 +28,99 @@
                                     <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="18"/>
                                     <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="nextB:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CDl-a0-o7P"/>
+                                </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9fW-VD-uVb">
+                                <rect key="frame" x="111.66666666666669" y="291" width="170" height="170"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kad-SD-yXv">
+                                        <rect key="frame" x="19.999999999999986" y="20" width="130" height="130"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="SCY-qD-a2n">
+                                                <rect key="frame" x="25" y="27.000000000000007" width="80" height="76.666666666666686"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="80" id="1O5-Iv-VZI"/>
+                                                    <constraint firstAttribute="width" constant="80" id="Pdj-kL-TOh"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="6XN-2O-HNJ">
+                                                <rect key="frame" x="100" y="101" width="30" height="28.666666666666686"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="LGG-Nq-76v"/>
+                                                    <constraint firstAttribute="width" constant="30" id="TET-qG-SEq"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.57647061349999995" green="0.71372550729999995" blue="0.92156863209999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="6XN-2O-HNJ" secondAttribute="bottom" id="0gp-85-c7B"/>
+                                            <constraint firstItem="SCY-qD-a2n" firstAttribute="centerY" secondItem="Kad-SD-yXv" secondAttribute="centerY" id="K21-Pu-iPr"/>
+                                            <constraint firstItem="SCY-qD-a2n" firstAttribute="centerX" secondItem="Kad-SD-yXv" secondAttribute="centerX" id="qBX-e3-szY"/>
+                                            <constraint firstAttribute="trailing" secondItem="6XN-2O-HNJ" secondAttribute="trailing" id="zHc-9o-v3b"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.77647060160000003" green="0.85098040100000005" blue="0.96078431610000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstItem="Kad-SD-yXv" firstAttribute="top" secondItem="9fW-VD-uVb" secondAttribute="top" constant="20" id="4qh-mJ-2Pb"/>
+                                    <constraint firstAttribute="width" constant="170" id="fwP-hi-ZLh"/>
+                                    <constraint firstAttribute="bottom" secondItem="Kad-SD-yXv" secondAttribute="bottom" constant="20" id="hwr-3o-ltH"/>
+                                    <constraint firstAttribute="height" constant="170" id="jFX-q2-QUC"/>
+                                    <constraint firstAttribute="trailing" secondItem="Kad-SD-yXv" secondAttribute="trailing" constant="20" id="vav-Su-D5q"/>
+                                    <constraint firstItem="Kad-SD-yXv" firstAttribute="leading" secondItem="9fW-VD-uVb" secondAttribute="leading" constant="20" id="zVh-kD-Eb3"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Contacts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CcY-99-Z27">
+                                <rect key="frame" x="20" y="471" width="353" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="JKn-zh-WRM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lets Load all your contacts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1V-cY-Vfk">
+                                <rect key="frame" x="20" y="496" width="353" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="NPs-NB-YUs"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                <color key="textColor" red="0.18039217590000001" green="0.40784314269999999" blue="0.85098040100000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="K1V-cY-Vfk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="1eP-c8-uI6"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ULU-bB-sZT" secondAttribute="bottom" constant="20" id="KV8-40-YxM"/>
+                            <constraint firstItem="CcY-99-Z27" firstAttribute="top" secondItem="9fW-VD-uVb" secondAttribute="bottom" constant="10" id="VgV-xl-haE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="K1V-cY-Vfk" secondAttribute="trailing" constant="20" id="d0L-pu-k8v"/>
+                            <constraint firstItem="9fW-VD-uVb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ehC-wX-iAG"/>
+                            <constraint firstItem="K1V-cY-Vfk" firstAttribute="top" secondItem="CcY-99-Z27" secondAttribute="bottom" constant="5" id="nzG-c4-3WU"/>
+                            <constraint firstItem="9fW-VD-uVb" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="-50" id="owK-dG-Xit"/>
+                            <constraint firstItem="CcY-99-Z27" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="qqO-gq-7k8"/>
                             <constraint firstItem="ULU-bB-sZT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="wWP-1i-6XS"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ULU-bB-sZT" secondAttribute="trailing" constant="40" id="wXe-KY-Tl4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CcY-99-Z27" secondAttribute="trailing" constant="20" id="yW9-if-q1G"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="firstCircle" destination="9fW-VD-uVb" id="ZnK-WC-BcO"/>
+                        <outlet property="nextB" destination="ULU-bB-sZT" id="D4f-nh-Vee"/>
+                        <outlet property="secondCircle" destination="Kad-SD-yXv" id="KhT-5S-yMV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="120" y="4"/>
+            <point key="canvasLocation" x="119.84732824427481" y="3.5211267605633805"/>
         </scene>
     </scenes>
     <resources>
+        <image name="person.fill" catalog="system" width="128" height="120"/>
+        <image name="plus.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
