--- a/Smooches/Storyboards/Base.lproj/Main.storyboard
+++ b/Smooches/Storyboards/Base.lproj/Main.storyboard
@@ -136,7 +136,7 @@
         <!--Home-->
         <scene sceneID="TVC-tV-bje">
             <objects>
-                <viewController id="9an-VX-WK4" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeVC" id="9an-VX-WK4" customClass="HomeVC" customModule="Smooches" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qyb-BE-EgK">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -145,7 +145,7 @@
                                 <rect key="frame" x="0.0" y="119" width="393" height="650"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="70" id="QOO-re-shu">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="HomeTVC" rowHeight="70" id="QOO-re-shu" customClass="HomeTVC" customModule="Smooches" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QOO-re-shu" id="XYf-6d-1Aa">
@@ -201,6 +201,12 @@
                                                 <constraint firstItem="zhM-Tl-IXB" firstAttribute="top" secondItem="XYf-6d-1Aa" secondAttribute="top" constant="5" id="rrM-hl-cwa"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="cardV" destination="zhM-Tl-IXB" id="2J7-Xc-lh5"/>
+                                            <outlet property="imgI" destination="bCq-cP-1eh" id="2BQ-4H-5Z9"/>
+                                            <outlet property="nameL" destination="fjG-mj-2LG" id="Sxz-yX-QOz"/>
+                                            <outlet property="phoneL" destination="RsF-If-6fc" id="aQx-23-xu4"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -213,6 +219,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="arrow.clockwise" catalog="system" title="Refresh"/>
+                                <connections>
+                                    <action selector="refreshB:" destination="9an-VX-WK4" eventType="touchUpInside" id="uSj-Lh-eyC"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="FjU-F0-MHl"/>
@@ -227,6 +236,10 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="homekit" catalog="system" id="y0C-Ls-Mj0"/>
+                    <connections>
+                        <outlet property="refreshB" destination="dNj-dB-Ub1" id="bkK-zB-hQ4"/>
+                        <outlet property="tableView" destination="JMJ-Pq-1oS" id="xFR-cq-JhA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fso-YK-Tby" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
